<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RollInfoActivity">

    <ImageButton
        android:id="@+id/ecks_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/go_back"
        android:scaleType="fitCenter"
        android:background="#00000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/roll_info_name_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/name"
        />
    <TextView
        android:id="@+id/roll_info_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        app:layout_constraintTop_toBottomOf="@+id/roll_info_name_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:text=""
        />
    <TextView
        android:id="@+id/roll_info_type_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        app:layout_constraintTop_toBottomOf="@+id/roll_info_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/roll_type"
        />
    <TextView
        android:id="@+id/roll_info_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        app:layout_constraintTop_toBottomOf="@+id/roll_info_type_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:text=""
        />
    <TextView
        android:id="@+id/roll_info_exposures_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        app:layout_constraintTop_toBottomOf="@+id/roll_info_type"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/max_exposures"
        />
    <TextView
        android:id="@+id/roll_info_exposures"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        app:layout_constraintTop_toBottomOf="@+id/roll_info_exposures_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:text=""
        />
    <TextView
        android:id="@+id/roll_info_date_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        app:layout_constraintTop_toBottomOf="@+id/roll_info_exposures"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/date_created"
        />
    <TextView
        android:id="@+id/roll_info_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        app:layout_constraintTop_toBottomOf="@+id/roll_info_date_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:text=""
        />



</androidx.constraintlayout.widget.ConstraintLayout>