<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@android:style/Theme.NoTitleBar"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/rolls_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="23dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/rolls"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textScaleX="1"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/stats_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#000000" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="300dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/settings"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textScaleX="1"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_button"
        app:strokeColor="#000000" />

    <Button
        android:id="@+id/stats_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="23dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/stats"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textScaleX="1"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/map_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rolls_button"
        app:strokeColor="#000000" />

    <Button
        android:id="@+id/map_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="23dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/map"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textScaleX="1"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/settings_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stats_button"
        app:strokeColor="#000000" />
    <ImageButton
        android:id="@+id/take_photo_button"
        android:layout_width="100dp"
        android:layout_height="44dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:background="#00000000"
        android:contentDescription="@string/take_a_photo"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_button"
        />

    <TextView
        android:id="@+id/exposures_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/take_photo_button"
        app:layout_constraintBottom_toTopOf="@+id/dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Spinner
        android:id="@+id/dropdown"
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:spinnerMode="dialog"
        android:background="#00000000"
        app:layout_constraintTop_toBottomOf="@+id/take_photo_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>